httpbin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: httpbin
  namespace: default
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        livenessProbe:
          httpGet:
            path: /get
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 80
