default-http-backend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: default-backend-service
  namespace: default
spec:
  selector:
    app: default-backend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
