httpbin-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpbin
  namespace: default
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
