httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: httpbin-ingress
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: httpbin.ingress 
    http:
        paths:
        - path: /
          backend:
            serviceName: httpbin
            servicePort: 80
